# routes/contacts.js
@@ -1,12 +1,0 @@
-const express = require('express');
-const router = express.Router();
-
-const contactsController = require('../controllers/contacts');
-
-router.get('/', contactsController.getAllContacts);
-router.get('/:id', contactsController.getSingleContact);
-router.post('/', contactsController.addContact);
-router.put('/:id', contactsController.updateContact);
-router.delete('/:id', contactsController.deleteContact);
-
-module.exports = router;
