# routes/index.js
@@ -1,10 +1,9 @@
 const express = require('express');
 const router = express.Router();
-const controller = require("../controllers")
 
-router.get("/", controller.router)
+
 router.use('/', require('./swagger'));
-router.use('/contacts', require('./contacts'))
+router.use('/singers', require('./singers'))
 
 module.exports = router;
 
